--- a/public/sass/helpers/_logo.scss
+++ b/public/sass/helpers/_logo.scss
@@ -23,6 +23,19 @@ $logo_s: 0.56 * $container_h;
     font-family: serif;
 }
 
+@media screen and (orientation: portrait) {
+    $container_h: 0.9 * $screen_h;
+    $logo_s: 0.5 * 100vw;
+
+    #logo {
+        @include checkerboard($light-green, $green, $logo_s * 0.35);
+        @include absoluteSize($logo_s, $logo_s);
+        margin-bottom: 0;
+        font-size: 0.8 * $logo_s;
+    }
+
+}
+
 #logo:hover {
     box-shadow: 0px 0px 10px $black;
     text-shadow: 0px -4px 8px $black;
