--- a/public/style/index.css
+++ b/public/style/index.css
@@ -297,6 +297,23 @@ input[type=submit], input[type=submit]:focus {
   #logo::before {
     content: 'Q'; }
 
+@media screen and (orientation: portrait) {
+  #logo {
+    background-color: #DCFEED;
+    background-image: -webkit-linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), -webkit-linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
+    background-image: -o-linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), -o-linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
+    background-image: -moz-linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), -moz-linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
+    background-image: linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
+    background-size: 17.5vw 17.5vw;
+    background-position: center;
+    width: 50vw;
+    max-width: 50vw;
+    min-width: 50vw;
+    height: 50vw;
+    max-height: 50vw;
+    min-height: 50vw;
+    margin-bottom: 0;
+    font-size: 40vw; } }
 #logo:hover {
   box-shadow: 0px 0px 10px #111111;
   text-shadow: 0px -4px 8px #111111; }
@@ -516,33 +533,6 @@ h1:hover {
 #online_game {
   opacity: 0.35; }
 
-#card {
-  width: 80%;
-  max-width: 80%;
-  min-width: 80%;
-  height: 64vh;
-  max-height: 64vh;
-  min-height: 64vh;
-  display: -webkit-flex;
-  -webkit-flex: 1;
-  -webkit-flex-direction: column;
-  -webkit-justify-content: space-around;
-  -webkit-align-items: center;
-  -webkit-align-content: space-around;
-  -webkit-flex-wrap: wrap;
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  align-content: space-around;
-  flex-wrap: wrap;
-  background-color: rgba(220, 254, 237, 0.8);
-  box-shadow: 0px 0px 5px #555555;
-  font-size: 2em;
-  color: #125521;
-  text-align: center; }
-
 h2 {
   font-size: 1.5em; }
 
@@ -587,5 +577,161 @@ a, a:visited, a:link {
     color: #DCFEED; }
   #footer a:active {
     color: #125521; }
+
+@media screen and (orientation: portrait) {
+  #header {
+    width: 100vw;
+    max-width: 100vw;
+    min-width: 100vw;
+    height: 6vh;
+    max-height: 6vh;
+    min-height: 6vh;
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
+    -webkit-align-content: center;
+    align-content: center; }
+
+  .button {
+    display: -webkit-flex;
+    -webkit-flex: 1;
+    -webkit-flex-direction: column;
+    -webkit-justify-content: space-around;
+    -webkit-align-items: center;
+    -webkit-align-content: space-around;
+    -webkit-flex-wrap: wrap;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+    flex-wrap: wrap;
+    width: 30vw;
+    max-width: 30vw;
+    min-width: 30vw;
+    height: 4.2vh;
+    max-height: 4.2vh;
+    min-height: 4.2vh;
+    font-size: 2.1vh;
+    color: #DCFEED; }
+
+  #container {
+    display: -webkit-flex;
+    -webkit-flex: 1;
+    -webkit-flex-direction: column;
+    -webkit-justify-content: space-around;
+    -webkit-align-items: center;
+    -webkit-align-content: space-around;
+    -webkit-flex-wrap: wrap;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+    flex-wrap: wrap;
+    width: 100vw;
+    max-width: 100vw;
+    min-width: 100vw;
+    height: 90vh;
+    max-height: 90vh;
+    min-height: 90vh; }
+
+  h1 {
+    width: 100vw;
+    max-width: 100vw;
+    min-width: 100vw;
+    height: 9vh;
+    max-height: 9vh;
+    min-height: 9vh;
+    font-size: 15vw; }
+
+  #menu_left, #menu_right {
+    width: 100vw;
+    max-width: 100vw;
+    min-width: 100vw;
+    height: 24.3vh;
+    max-height: 24.3vh;
+    min-height: 24.3vh;
+    display: -webkit-flex;
+    -webkit-flex: 1;
+    -webkit-flex-direction: column;
+    -webkit-justify-content: space-around;
+    -webkit-align-items: center;
+    -webkit-align-content: space-around;
+    -webkit-flex-wrap: wrap;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 9vh;
+    margin: 0; }
+
+  #menu_left {
+    justify-content: flex-end; }
+
+  #menu_right {
+    justify-content: flex-start; }
+
+  #menu {
+    width: 100vw;
+    max-width: 100vw;
+    min-width: 100vw;
+    height: 81vh;
+    max-height: 81vh;
+    min-height: 81vh;
+    display: -webkit-flex;
+    -webkit-flex: 1;
+    -webkit-flex-direction: column;
+    -webkit-justify-content: space-around;
+    -webkit-align-items: center;
+    -webkit-align-content: space-around;
+    -webkit-flex-wrap: wrap;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+    flex-wrap: wrap; }
+
+  .link, a.link {
+    width: 80vw;
+    max-width: 80vw;
+    min-width: 80vw;
+    height: 6.94286vh;
+    max-height: 6.94286vh;
+    min-height: 6.94286vh;
+    display: -webkit-flex;
+    -webkit-flex: 1;
+    -webkit-flex-direction: column;
+    -webkit-justify-content: space-around;
+    -webkit-align-items: center;
+    -webkit-align-content: space-around;
+    -webkit-flex-wrap: wrap;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+    flex-wrap: wrap;
+    background-color: #21CC43;
+    font-size: 3.47143vh;
+    color: #125521;
+    margin: 1.73571vh auto; }
+
+  #footer {
+    width: 100vw;
+    max-width: 100vw;
+    min-width: 100vw;
+    height: 4vh;
+    max-height: 4vh;
+    min-height: 4vh;
+    font-size: 2vh; } }
 
 /*# sourceMappingURL=index.css.map */
