--- a/public/sass/helpers/_logo.scss
+++ b/public/sass/helpers/_logo.scss
@@ -23,15 +23,19 @@ $logo_s: 0.56 * $container_h;
     font-family: serif;
 }
 
+@media screen and (max-height: 400px) {
+    font-size: 0.6 * $logo_s;
+}
+
 @media screen and (orientation: portrait) {
     $container_h: 0.9 * $screen_h;
-    $logo_s: 0.5 * 100vw;
+    $logo_s: 0.3 * $container_h;
 
     #logo {
         @include checkerboard($light-green, $green, $logo_s * 0.35);
         @include absoluteSize($logo_s, $logo_s);
         margin-bottom: 0;
-        font-size: 0.8 * $logo_s;
+        font-size: 0.6 * $logo_s;
     }
 
 }
