--- a/public/style/index.css
+++ b/public/style/index.css
@@ -221,6 +221,46 @@ input[type=submit], input[type=submit]:focus {
 #signUpDiv input[type=text], #signUpDiv input[type=password] {
   background-color: transparent; }
 
+@media screen and (orientation: portrait) {
+  #types, #logIn, #signUp {
+    width: 75%;
+    max-width: 75%;
+    min-width: 75%;
+    height: 80vh;
+    max-height: 80vh;
+    min-height: 80vh;
+    display: -webkit-flex;
+    -webkit-flex: 1;
+    -webkit-flex-direction: column;
+    -webkit-justify-content: space-around;
+    -webkit-align-items: center;
+    -webkit-align-content: space-around;
+    -webkit-flex-wrap: wrap;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+    flex-wrap: wrap;
+    background-color: #DCFEED;
+    color: #125521; }
+
+  .cancel {
+    width: 75%;
+    max-width: 75%;
+    min-width: 75%;
+    height: 8vh;
+    max-height: 8vh;
+    min-height: 8vh; }
+
+  .inner_ops {
+    width: 75%;
+    max-width: 75%;
+    min-width: 75%;
+    height: 72vh;
+    max-height: 72vh;
+    min-height: 72vh; } }
 @keyframes rotate {
   0% {
     transform: rotate(0deg); }
@@ -297,6 +337,8 @@ input[type=submit], input[type=submit]:focus {
   #logo::before {
     content: 'Q'; }
 
+@media screen and (max-height: 400px) {
+  font-size: 28.224vh; }
 @media screen and (orientation: portrait) {
   #logo {
     background-color: #DCFEED;
@@ -304,16 +346,16 @@ input[type=submit], input[type=submit]:focus {
     background-image: -o-linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), -o-linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
     background-image: -moz-linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), -moz-linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
     background-image: linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
-    background-size: 17.5vw 17.5vw;
+    background-size: 9.45vh 9.45vh;
     background-position: center;
-    width: 50vw;
-    max-width: 50vw;
-    min-width: 50vw;
-    height: 50vw;
-    max-height: 50vw;
-    min-height: 50vw;
+    width: 27vh;
+    max-width: 27vh;
+    min-width: 27vh;
+    height: 27vh;
+    max-height: 27vh;
+    min-height: 27vh;
     margin-bottom: 0;
-    font-size: 40vw; } }
+    font-size: 16.2vh; } }
 #logo:hover {
   box-shadow: 0px 0px 10px #111111;
   text-shadow: 0px -4px 8px #111111; }
@@ -644,7 +686,7 @@ a, a:visited, a:link {
     height: 9vh;
     max-height: 9vh;
     min-height: 9vh;
-    font-size: 15vw; }
+    font-size: 5.4vh; }
 
   #menu_left, #menu_right {
     width: 100vw;
